@@ -3,3 +3,6 @@
 --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
 --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
 --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+--enable-native-access=ALL-UNNAMED
+--sun-misc-unsafe-memory-access=allow
+
